Fix styling of transaction order to align with parking lot list

--- a/src/components/TransactionOrder/TransactionOrder.css
+++ b/src/components/TransactionOrder/TransactionOrder.css
@@ -5,6 +5,10 @@
   background: #fff;
 }
 
+.transaction-order-list div {
+  border: 0!important;
+}
+
 .chevron {
     position: absolute;
     right: 0px;
